[gd_scene load_steps=8 format=3 uid="uid://jg6nqxsvveio"]

[ext_resource type="Script" uid="uid://dufxh8ueoik2j" path="res://addons/go_p2p/template/browser/scripts/SCR_server_browser.gd" id="1_gv3i7"]
[ext_resource type="PackedScene" uid="uid://cys0xqj10anb1" path="res://addons/go_p2p/template/browser/create_lobby.tscn" id="2_1pirx"]
[ext_resource type="PackedScene" uid="uid://ra85b6k1sbvn" path="res://addons/go_p2p/template/browser/server_search.tscn" id="2_gr4sm"]
[ext_resource type="PackedScene" uid="uid://dc0ca4abmqcr2" path="res://addons/go_p2p/template/browser/server_item.tscn" id="2_nrigk"]
[ext_resource type="Texture2D" uid="uid://3jo2hqi4ttde" path="res://addons/go_p2p/assets/connect_normal.png" id="4_x6fdm"]
[ext_resource type="Texture2D" uid="uid://com6frgncj8bj" path="res://addons/go_p2p/assets/connect_hovered.png" id="5_nrigk"]
[ext_resource type="PackedScene" uid="uid://cis3i6ju1qxem" path="res://addons/go_p2p/template/browser/profile.tscn" id="5_oh0w4"]

[node name="ServerBrowser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gv3i7")
SERVER_ITEM = ExtResource("2_nrigk")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.125911, 0.125911, 0.125911, 1)

[node name="main_container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -509.0
offset_top = -277.0
offset_right = 509.0
offset_bottom = 277.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabBar" type="TabBar" parent="main_container"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
current_tab = 0
tab_count = 3
tab_0/title = "Server Browser"
tab_1/title = "Create Lobby"
tab_2/title = "Profile"

[node name="browser_container" type="HBoxContainer" parent="main_container"]
visible = false
layout_mode = 2

[node name="server_panel" type="Panel" parent="main_container/browser_container"]
custom_minimum_size = Vector2(700, 500)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="main_container/browser_container/server_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="server_container" type="VBoxContainer" parent="main_container/browser_container/server_panel/ScrollContainer"]
layout_mode = 2

[node name="Separator" type="VSeparator" parent="main_container/browser_container"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="search_panel" type="Panel" parent="main_container/browser_container"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 2

[node name="server_search" parent="main_container/browser_container/search_panel" instance=ExtResource("2_gr4sm")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -150.0
offset_right = 125.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="create_container" type="HBoxContainer" parent="main_container"]
visible = false
layout_mode = 2

[node name="create_panel" type="Panel" parent="main_container/create_container"]
custom_minimum_size = Vector2(1000, 500)
layout_mode = 2

[node name="create_lobby" parent="main_container/create_container/create_panel" instance=ExtResource("2_1pirx")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -325.0
offset_right = 325.0
grow_horizontal = 2

[node name="Profile" parent="main_container" instance=ExtResource("5_oh0w4")]
layout_mode = 2

[node name="Label" type="Label" parent="main_container"]
layout_mode = 2
text = "R refresh"

[node name="WindowPass" type="Window" parent="."]
initial_position = 2
size = Vector2i(500, 100)
visible = false
min_size = Vector2i(500, 100)
max_size = Vector2i(500, 100)

[node name="HBox" type="HBoxContainer" parent="WindowPass"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.5
offset_top = -17.5
offset_right = 215.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="WindowPass/HBox"]
layout_mode = 2
text = "PASSWORD"

[node name="password" type="LineEdit" parent="WindowPass/HBox"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
secret = true

[node name="pass_btn" type="TextureButton" parent="WindowPass/HBox"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture_normal = ExtResource("4_x6fdm")
texture_pressed = ExtResource("4_x6fdm")
texture_hover = ExtResource("5_nrigk")
ignore_texture_size = true
stretch_mode = 5

[connection signal="tab_changed" from="main_container/TabBar" to="." method="_on_tab_bar_tab_changed"]
[connection signal="close_requested" from="WindowPass" to="." method="_on_window_pass_close_requested"]
[connection signal="pressed" from="WindowPass/HBox/pass_btn" to="." method="_on_pass_btn_pressed"]
